# ancestralcost

./: .coverage  README.md  conftest.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml
ancestral_cost/: ancestral_cost.py
ancestralcost/: .pypirc  README.md  __init__.py  __main__.py  alignment_permutations.py  ancestralcost.py  graph.py  indel_placement.py  pyproject.toml  requirements.txt  setup.py
ancestralcost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ancestralcost/.github/workflows/: build.yml
tests/: conftest.py  simpletest.py  test_simple.py
tests/files/: DHAD_1612.aln  DHAD_1612.nwk  DHAD_585.aln  DHAD_585_ancestors.nwk  simple_4.aln  simple_4.nwk  simple_6.aln  simple_6.nwk
