[build-system]
requires = [
"flit_core >=3.2,<4"]


build-backend = "flit_core.buildapi"

[project]
name = "ancestralcost"
authors = [{name = "Gabe Foley", email = "g.foley@uq.edu.au"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
"astroid==2.8.0",
"attrs==21.2.0",
"backports.entry-points-selectable==1.1.0",
"biopython==1.79",
"black==21.9b0",
"certifi==2021.5.30",
"charset-normalizer==2.0.6",
"click==8.0.1",
"coverage==5.5",
"distlib==0.3.2",
"docutils==0.17.1",
"ete3==3.1.2",
"filelock==3.0.12",
"flake8==3.9.2",
"flit==3.3.0",
"flit_core==3.3.0",
"idna==3.2",
"importlib-metadata==4.8.1",
"iniconfig==1.1.1",
"isort==5.9.3",
"keyring==23.2.1",
"lazy-object-proxy==1.6.0",
"mccabe==0.6.1",
"mypy==0.910",
"mypy-extensions==0.4.3",
"numpy>=1.19",
"packaging==21.0",
"pandas==1.3.3",
"pathspec==0.9.0",
"platformdirs==2.3.0",
"pluggy==1.0.0",
"py==1.10.0",
"pyqt5",
"pycodestyle==2.7.0",
"pyflakes==2.3.1",
"pylint==2.11.1",
"pyparsing==2.4.7",
"pytest==6.2.5",
"python-dateutil==2.8.2",
"pytz==2021.1",
"regex==2021.8.28",
"requests==2.26.0",
"six==1.16.0",
"toml==0.10.2",
"tomli==1.2.1",
"tox==3.24.4",
"typing-extensions==3.10.0.2",
"urllib3==1.26.6",
"virtualenv==20.8.0",
"wrapt==1.12.1",
"zipp==3.5.0"]


[project.urls]
Home = "https://github.com/gabefoley/ancestralcost"
